Fixed table styling on league team sked, fixed extra margin on message board button

--- a/src/css/league-styles.css
+++ b/src/css/league-styles.css
@@ -62,6 +62,14 @@
   text-align: right !important;
 }
 
+.league-schedule {
+  width: 100% !important;
+}
+
+.league-schedule th:nth-child(3) {
+  text-align: right !important;
+}
+
 .message-board {
   width: 98%;
   float: none;
@@ -80,4 +88,8 @@
   margin-right: 15px;
   margin-bottom: 20px;
   padding-bottom: 12px;
+}
+
+.plus-button {
+  margin-bottom: -1px;
 }
